fix: component decomposition && create Readme

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -61,7 +61,7 @@
     "view1": " of ",
     "view2": " items",
     "sortTitle": "Sort by:",
-    "big": "Increase",
+    "big": "Ascending",
     "less": "Descending",
     "discount": "Discount",
     "all": "All",
